--- a/SIRP/project.json
+++ b/SIRP/project.json
@@ -18,7 +18,7 @@
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "23.10.8.0",
-  "projectVersion": "1.0.1-alpha",
+  "projectVersion": "1.0.1-alpha.11",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
@@ -62,12 +62,6 @@
     {
       "filePath": "GlobalExceptionHandler.xaml",
       "uniqueId": "8251b72d-a9d5-4657-8f36-99163d4d1bda",
-      "input": [],
-      "output": []
-    },
-    {
-      "filePath": "DeleteMe - Add Queue Item.xaml",
-      "uniqueId": "7aa99d94-0ddc-4cce-b9bc-22210553bd1c",
       "input": [],
       "output": []
     }
