--- a/SIRP/project.json
+++ b/SIRP/project.json
@@ -18,7 +18,7 @@
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "23.10.8.0",
-  "projectVersion": "1.0.15",
+  "projectVersion": "1.0.16",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
@@ -35,7 +35,8 @@
     "readyForPiP": false,
     "startsInPiP": false,
     "mustRestoreAllDependencies": true,
-    "pipType": "ChildSession"
+    "pipType": "ChildSession",
+    "robotVersion": "24.10.0"
   },
   "designOptions": {
     "projectProfile": "Developement",
@@ -83,7 +84,7 @@
       "input": [
         {
           "name": "errorInfo",
-          "type": "UiPath.Activities.Contracts.ExceptionHandlerArgs, UiPath.Activities.Contracts, Version=23.10.8.0, Culture=neutral, PublicKeyToken=null",
+          "type": "UiPath.Activities.Contracts.ExceptionHandlerArgs, UiPath.Activities.Contracts, Version=24.10.14.0, Culture=neutral, PublicKeyToken=null",
           "required": true,
           "hasDefault": false
         }
@@ -91,7 +92,7 @@
       "output": [
         {
           "name": "result",
-          "type": "UiPath.Activities.Contracts.ErrorAction, UiPath.Activities.Contracts, Version=23.10.8.0, Culture=neutral, PublicKeyToken=null"
+          "type": "UiPath.Activities.Contracts.ErrorAction, UiPath.Activities.Contracts, Version=24.10.14.0, Culture=neutral, PublicKeyToken=null"
         }
       ]
     }
