--- a/SIRP/project.json
+++ b/SIRP/project.json
@@ -18,7 +18,7 @@
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "23.10.8.0",
-  "projectVersion": "1.0.22-alpha.1",
+  "projectVersion": "1.0.21",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
